--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,6 +13,7 @@
 
 body{
     background: linear-gradient(180deg, rgba(255,141,155,0.1) 0%, rgba(255,255,255,1) 10%);
+    scroll-behavior: smooth;
 
 }
 
@@ -274,7 +275,7 @@ body{
     }
 }
 
-.contagion{
+#contagion{
     .card{
         box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.08);
         border-radius: 10px;
