--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@
     --fontColor: #035755;
     --fontRedHat: "Red Hat Display", sans-serif;
 }
+
+html {
+    /* overflow-x: hidden; */
+}
 body {
     background: linear-gradient(180deg, rgba(255, 141, 155, 0.1) 0%, #fff 10%);
     scroll-behavior: smooth;
@@ -24,11 +28,16 @@ h6 {
     font-family: var(--fontRedHat);
     font-weight: 500;
 }
+
+main {
+    margin-top: 10rem;
+}
 .header {
     padding-top: 31px;
     padding-bottom: 31px;
-    position: sticky;
+    position: fixed;
     top: 0;
+    width: 100%;
     background: rgba(255, 141, 155, 0.01);
     z-index: 99;
     transition: 666ms cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -583,72 +592,12 @@ h6 {
 }
 body {
     position: relative;
+    overflow-x: hidden;
     background-color: var(--bg-body);
     color: var(--color-txt);
 }
 .content {
     padding: 15px;
-}
-.nav-wrapper {
-    background-color: var(--bg-content);
-    box-shadow: var(--shadow);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 0 30px;
-    z-index: 99;
-}
-.nav {
-    height: var(--nav-height);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.logo {
-    color: var(--color-txt);
-    font-size: 2rem;
-    font-weight: 900;
-}
-.logo i {
-    color: red;
-}
-.darkmode-switch {
-    --width: 60px;
-    --height: 20px;
-    width: var(--width);
-    height: var(--height);
-    background-color: lightslategray;
-    border-radius: 10px;
-    position: relative;
-    cursor: pointer;
-}
-.darkmode-switch span {
-    display: inline-grid;
-    place-items: center;
-    height: calc(var(--height) * 2);
-    width: calc(var(--height) * 2);
-    border-radius: 50%;
-    background-color: var(--color-txt);
-    color: var(--bg-content);
-    font-size: 2rem;
-    position: absolute;
-    left: 0;
-    top: calc(-1 * var(--height) / 2);
-    transition: left 0.3s ease-in-out;
-}
-.darkmode-switch.dark span {
-    left: calc(var(--width) - var(--height) * 2);
-    background-color: var(--bg-body);
-    color: var(--color-txt);
-}
-.darkmode-switch span .bxs-moon {
-    display: none;
-}
-.darkmode-switch.dark span .bxs-moon {
-    display: inline-block;
-}
-.darkmode-switch.dark span .bxs-sun {
-    display: none;
 }
 .box {
     width: 100%;
@@ -657,6 +606,7 @@ body {
     box-shadow: var(--shadow);
     padding: 15px;
     margin-bottom: 30px;
+    border: 1px solid rgba(0, 0, 0, .05);
 }
 .dark .box {
     border: 1px solid var(--bg-content);
@@ -827,6 +777,10 @@ body {
     body {
         font-size: 12px;
     }
+}
+
+.card {
+    border: 1px solid rgba(0, 0, 0, .05);
 }
 .card-img-top {
     object-fit: cover;
